добавлено макеты для создания скл запросов, поиск пациента по id, изменена гет функция для пациента
